--- a/src/style/stylish.css
+++ b/src/style/stylish.css
@@ -26,7 +26,7 @@ pre.cm-rm-blockquote span.cm-quote + span.cm-quote {
 /* Fade tokens*/
 div.CodeMirror .cm-string.cm-url,
 div.CodeMirror .cm-header.cm-rm-header-token,
-div.CodeMirror .cm-rm-highlight.cm-rm-highlight-token,
+div.CodeMirror .cm-overlay.cm-rm-highlight.cm-rm-highlight-token,
 div.CodeMirror .cm-strikethrough.cm-rm-strike-token,
 div.CodeMirror .cm-rm-ins.cm-rm-ins-token,
 div.CodeMirror .cm-rm-sub.cm-rm-sub-token,
@@ -40,6 +40,7 @@ div.CodeMirror .cm-katex-marker-close,
 div.CodeMirror .cm-strong.cm-rm-strong-token {
 	opacity: 0.6;
 	background: transparent;
+	color: inherit;
 }
 /* Don't apply the fading in code blocks */
 div.CodeMirror .cm-jn-code-block .cm-string.cm-url,
@@ -55,6 +56,7 @@ div.CodeMirror .cm-jn-code-block .cm-quote.cm-rm-list-token,
 div.CodeMirror .cm-jn-code-block .cm-katex-marker-open,
 div.CodeMirror .cm-jn-code-block .cm-katex-marker-close {
 	opacity: revert;
+	color: inherit;
 }
 /* END Fade tokens*/
 
